<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_account_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/select_photo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reg_first_name"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_first_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/reg_last_name"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_last_name"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/reg_dob"
                    android:layout_width="260dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/prompt_dob"
                    android:inputType="date" />

                <ImageButton
                    android:id="@+id/calendar_btn"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_calendar" />

            </LinearLayout>

            <EditText
                android:id="@+id/reg_gender"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_gender"
                android:inputType="text" />

            <EditText
                android:id="@+id/reg_country"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_country"
                android:inputType="text" />

            <EditText
                android:id="@+id/reg_state"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_state"
                android:inputType="text" />

            <EditText
                android:id="@+id/reg_hometown"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_hometown"
                android:inputType="text" />

            <EditText
                android:id="@+id/reg_phone"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/addUserBtn"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@color/violet"
                android:text="@string/prompt_button"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>