<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/account_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <LinearLayout
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/user_age" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/divider" />

                <TextView
                    android:id="@+id/user_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/user_gender" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/divider" />

                <TextView
                    android:id="@+id/user_hometown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/user_hometown" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/delete_user_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_baseline_delete_24" />

    </LinearLayout>

</LinearLayout>